--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "clean-webpack-plugin": "^0.1.18",
     "css-loader": "^0.28.9",
+    "esformatter-jsx": "^8.0.1",
     "eslint": "^5.6.1",
     "eslint-plugin-react": "^7.11.1",
     "file-loader": "^1.1.9",
